--- a/Practice1/Practice1/Practice1.csproj
+++ b/Practice1/Practice1/Practice1.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>copy "$(ProjectDir)connection.config" "$(TargetDir)appsettings.json /Y</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
